[tool.poetry]
name = "hyperdiv-session"
version = "0.1.1"
description = "Session management for hyperdiv"
keywords = ["hyperdiv", "reactive", "ui", "web", "framework", "hyperdiv-session"]
authors = ["Vladimir Ignatev <ya.na.pochte@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Environment :: Web Environment",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[tool.poetry.dependencies]
python = "^3.9"
hyperdiv = "^0.1.8"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
requires-python = ">= 3.9"